tests/sources/invalid/classes/field_access_errors.fire
// Field access errors: unknown field on a class type, and field access on a
// non-class expression type.

import @firescript/std.io.println;

class Point {
    x: int32;
    y: int32;
}

p: Point = Point(1, 2);
z: int32 = p.z;  //~ ERROR FS-SEM-0010 @14

n: int32 = 5;
bad: int32 = n.x;  //~ ERROR FS-SEM-0010 @16
